Fixed text alignment and added image

--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,24 @@
 ﻿body {
     background-color: lightblue;
     scroll-behavior: smooth;
+
+    padding:0mm;
 }
 
 #name {
     width: auto;
     font-family: Arial;
-    color: lightslategray;
+    color: white;
+    size: 100px;;
+
+    top:-50%;
 }
 
 #motto {
     width: auto;
     font-family: Arial;
     color:darkgray;
+    top:-50%;
 }
 
 .align-center {
@@ -27,3 +33,59 @@
 .hidden {
     visibility: hidden;
 }
+
+#header-background {
+    width: 100%;
+    height: 100%;
+    position: inherit;
+
+    padding: 0px;
+}
+
+#header {
+    top: -50%;
+}
+
+/* Text Allignment in Picture */
+/* Container holding the image and the text */
+.container {
+    position: relative;
+    text-align: center;
+    color: white;
+  }
+  
+  /* Bottom left text */
+  .bottom-left {
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+  }
+  
+  /* Top left text */
+  .top-left {
+    position: absolute;
+    top: 8px;
+    left: 16px;
+  }
+  
+  /* Top right text */
+  .top-right {
+    position: absolute;
+    top: 8px;
+    right: 16px;
+  }
+  
+  /* Bottom right text */
+  .bottom-right {
+    position: absolute;
+    bottom: 8px;
+    right: 16px;
+  }
+  
+  /* Centered text */
+  .centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
